check_output_2.txt
warning: unused import: `warn`
 --> src\commands\mcp.rs:8:28
  |
8 | use tracing::{error, info, warn};
  |                            ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `code-rag` (lib) generated 1 warning (run `cargo fix --lib -p code-rag` to apply 1 suggestion)
    Checking code-rag v0.1.0 (I:\01-Master_Code\Test-Labs\code-rag)
warning: unused import: `Command`
 --> tests\integration\mcp_test.rs:3:20
  |
3 | use std::process::{Command, Stdio};
  |                    ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: use of deprecated function `assert_cmd::cargo::cargo_bin`: incompatible with a custom cargo build-dir, see instead `cargo::cargo_bin!`
 --> tests\integration\mcp_test.rs:7:39
  |
7 |     let bin_path = assert_cmd::cargo::cargo_bin("code-rag");
  |                                       ^^^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

error[E0599]: no method named `read_line` found for struct `std::io::BufReader<R>` in the current scope
    --> tests\integration\mcp_test.rs:41:12
     |
  41 |     reader.read_line(&mut line).expect("Failed to read line");
     |            ^^^^^^^^^
     |
    ::: C:\Users\ASCC\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\std\src\io\mod.rs:2587:8
     |
2587 |     fn read_line(&mut self, buf: &mut String) -> Result<usize> {
     |        --------- the method is available for `std::io::BufReader<std::process::ChildStdout>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: there is a method `read_be` with a similar name, but with different arguments
    --> C:\Users\ASCC\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\png-0.18.0\src\traits.rs:30:5
     |
  30 |     fn read_be(&mut self) -> io::Result<T>;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `BufRead` which provides `read_line` is implemented but not in scope; perhaps you want to import it
     |
   1 + use std::io::BufRead;
     |

error[E0599]: no method named `read_line` found for struct `std::io::BufReader<R>` in the current scope
    --> tests\integration\mcp_test.rs:65:12
     |
  65 |     reader.read_line(&mut line).expect("Failed to read line");
     |            ^^^^^^^^^
     |
    ::: C:\Users\ASCC\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\std\src\io\mod.rs:2587:8
     |
2587 |     fn read_line(&mut self, buf: &mut String) -> Result<usize> {
     |        --------- the method is available for `std::io::BufReader<std::process::ChildStdout>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: there is a method `read_be` with a similar name, but with different arguments
    --> C:\Users\ASCC\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\png-0.18.0\src\traits.rs:30:5
     |
  30 |     fn read_be(&mut self) -> io::Result<T>;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `BufRead` which provides `read_line` is implemented but not in scope; perhaps you want to import it
     |
   1 + use std::io::BufRead;
     |

warning: unused import: `Read`
 --> tests\integration\mcp_test.rs:2:15
  |
2 | use std::io::{Read, Write};
  |               ^^^^

warning: variable does not need to be mutable
   --> tests\integration\core.rs:122:9
    |
122 |     let mut searcher = CodeSearcher::new(Some(storage), Some(embedder), None, None, 1.0, 1.0, 60.0);
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> tests\integration\core.rs:180:9
    |
180 |     let mut searcher = CodeSearcher::new(Some(storage), Some(embedder), None, None, 1.0, 1.0, 60.0);
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:227:9
    |
227 |     let mut searcher = CodeSearcher::new(Some(storage), Some(embedder), None, None, 1.0, 1.0, 60.0);
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:245:19
    |
245 |     let (storage, mut embedder, chunker, db_path) = setup_test_env("ps_search").await;
    |                   ----^^^^^^^^
    |                   |
    |                   help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:278:9
    |
278 |     let mut searcher = CodeSearcher::new(Some(storage), Some(embedder), None, None, 1.0, 1.0, 60.0);
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:295:19
    |
295 |     let (storage, mut embedder, chunker, db_path) = setup_test_env("json_search").await;
    |                   ----^^^^^^^^
    |                   |
    |                   help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:328:9
    |
328 |     let mut searcher = CodeSearcher::new(Some(storage), Some(embedder), None, None, 1.0, 1.0, 60.0);
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:351:19
    |
351 |     let (storage, mut embedder, chunker, db_path) = setup_test_env("multi_lang_search").await;
    |                   ----^^^^^^^^
    |                   |
    |                   help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:389:9
    |
389 |     let mut searcher = CodeSearcher::new(Some(storage), Some(embedder), None, None, 1.0, 1.0, 60.0);
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:519:19
    |
519 |     let (storage, mut embedder, chunker, db_path) = setup_test_env("index_verification").await;
    |                   ----^^^^^^^^
    |                   |
    |                   help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\core.rs:556:9
    |
556 |     let mut searcher = CodeSearcher::new(Some(storage), Some(embedder), None, None, 1.0, 1.0, 60.0);
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
  --> tests\integration\model.rs:44:9
   |
44 |     let mut embedder = Embedder::new(
   |         ----^^^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
   --> tests\integration\server.rs:110:19
    |
110 |     let (storage, mut embedder, chunker, db_path) = setup_test_env("server_stress").await;
    |                   ----^^^^^^^^
    |                   |
    |                   help: remove this `mut`

For more information about this error, try `rustc --explain E0599`.
warning: `code-rag` (test "integration") generated 16 warnings
error: could not compile `code-rag` (test "integration") due to 2 previous errors; 16 warnings emitted
